--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "format:fix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
