--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "format:fix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "clsx": "^2.1.1",
+    "copy-to-clipboard": "^3.3.3",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
